# sampler-rpi-reader

./: .gitignore
src/: CMakeLists.txt  SpiTool.cpp
src/avr_io/: AvrOscilloscopeIo.h  AvrSpiIo.h  Spi.cpp  Spi.h
src/avr_io/local/: LocalAvrSpiIo.cpp  LocalAvrSpiIo.h  Spi.cpp  Spi.h
src/oscilloscope/: AvrOscilloscope.cpp  AvrOscilloscope.h  SampleReader.cpp  SampleReader.h  SpiMessages.h  SpiProfiler.cpp  SpiProfiler.h
src/server/: datareader.cpp  datareader.h  main.cpp
src/tools/: SpiTool.cpp  readSpi.cpp  testspi.cpp
